--- a/ZZCakeBuild/CakeBuild.csproj
+++ b/ZZCakeBuild/CakeBuild.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RunWorkingDirectory>$(MSBuildProjectDirectory)</RunWorkingDirectory>
   </PropertyGroup>
   
@@ -12,8 +12,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Reference Include="VintagestoryAPI">
-      <HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
-    </Reference>
+      <Reference Include="VintagestoryAPI">
+      <HintPath>../vs_server/VintagestoryAPI.dll</HintPath>
+     <Private>true</Private>
+      </Reference>
   </ItemGroup>
 </Project>
